cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(AnotherVulkanRenderer)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libraries)
add_compile_definitions(GLFW_INCLUDE_VULKAN VMA_IMPLEMENTATION VK_KHR_swapchain)
add_executable(avr ${CMAKE_CURRENT_SOURCE_DIR}/entry.cpp ${CMAKE_CURRENT_SOURCE_DIR}/renderer.hpp)
target_link_libraries(avr assimp.lib glfw3.lib vulkan-1.lib)